--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <p>git is a separate download and may be required to upload projects to cloud based repositories.</p>
         <h2>Contact</h2>
         <p>For all queries, please email <a href="mailto:markfinal@hotmail.com">markfinal@hotmail.com</a>.</p>
+        <p>(c) Mark Final, 2016</p>
     </div>
   </body>
 </html>
