Updates following proof read

--- a/index.html
+++ b/index.html
@@ -11,33 +11,35 @@
   <body>
     <div class="container">
         <div class="page-header">
-            <h1>Director</h1>
-            <img src="images/directorlogo.png" width="10%" />
+            <h1 class="text-center">Director <img class="text-center" src="images/directorlogo.png" width="10%" /></h1>
         </div>
-        <p>Director enables users to create animated CG scenes, play them back in realtime, or save a movie with frames rendered by PRMan.</p>
-        <p>Drag-n-drop geometry files onto the Director UI, and create instances of Actors using them.</p>
-        <p>Design shaders with the built-in node graph, using a subset of the Open Shading Language specification, and apply them to your Actors, to light and shade them how you imagined.</p>
-        <p>Animate virtually anything (Actors, Cameras, Lights, Shader parameters), by specifying property values at keyframes of your choice, in the Dope Sheet.</p>
-        <p>Preview in realtime on your GPU using OpenGL, for an approximate look of your animation.</p>
-        <p>Render individual frames using PRMan to check your look-dev.</p>
-        <p>Render your entire animation using PRMan, and create a movie file by combining the frame images using ffmpeg.</p>
-        <p>Share or collaborate your animations by saving them to the cloud.</p>
-        <h2>Download</h2>
+        <p>Director enables users to create animated CG scenes, play them back in realtime, or save a movie with frames rendered by <a href="https://renderman.pixar.com/">PRMan</a>.</p>
+        <p>Functionality includes:</p>
+        <ul>
+        <li>Drag-n-drop geometry files onto the Director UI, and create instances of <em>Actors</em> from them.</li>
+        <li>Design shaders with the built-in node graph, using a subset of the <a href="http://opensource.imageworks.com/?p=osl">Open Shading Language</a> specification, and apply them to your Actors, to light and shade them how you imagined.</li>
+        <li>Animate virtually anything (Actors, Cameras, Lights, Shader parameters), by specifying property values at keyframes of your choice, in the Dope Sheet.</li>
+        <li>Preview in realtime on your GPU using OpenGL, for an approximate look of your animation.</li>
+        <li>Render individual frames using PRMan to check your look-dev.</li>
+        <li>Render your entire animation using PRMan, and create a movie file by combining the frame images using ffmpeg.</li>
+        <li>Share or collaborate your animations by saving them to the cloud.</li>
+        </ul>
+        <h3>Downloads</h3>
         <p>Installers for the latest version of Director can be downloaded from <a href="./downloads" target="_blank">here</a>, for 64-bit Windows, Linux and macOS.</p>
         <p>The User guide and Examples guide can be downloaded from <a href="./downloads/docs" target="_blank">here</a>.</p>
-        <h2>License</h2>
+        <h3>License</h3>
         <p>A free 30-day trial license will be granted upon first use. Please contact the author for more details or alternatives.</p>
-        <h2>Examples</h2>
+        <h3>Examples</h3>
         <p>Some example projects can be found at <a href="https://github.com/director-examples" target="_blank">https://github.com/director-examples</a>. See the Examples guide for how to download them your computer.</p>
         <p>Videos of rendered animations and usage of Director can be found at <a href="https://vimeo.com/user58998164/videos" target="_blank">https://vimeo.com/user58998164/videos</a>.</p>
-        <h2>Additional Requirements</h2>
-        <p>To use PRMan requires a separate download and license.</p>
+        <h3>Additional Requirements</h3>
+        <p>To use PRMan, a separate download and license is required.</p>
         <p>ffmpeg used to create movie files requires a separate download.</p>
-        <p>Blender requires a separate download in order to load .blend files.</p>
+        <p>Blender is used to export data from .blend files, and requires a separate download.</p>
         <p>git is a separate download and may be required to upload projects to cloud based repositories.</p>
-        <h2>Contact</h2>
+        <h3>Contact</h3>
         <p>For all queries, please email <a href="mailto:markfinal@hotmail.com">markfinal@hotmail.com</a>.</p>
-        <p>(c) Mark Final, 2016</p>
+        <p>Copyright Mark Final, 2016</p>
     </div>
   </body>
 </html>
