Open links in separate tabs

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="page-header">
             <h1 class="text-center">Director <img class="text-center" src="images/directorlogo.png" width="10%" /></h1>
         </div>
-        <p>Director enables users to create animated CG scenes, play them back in realtime, or save a movie with frames rendered by <a href="https://renderman.pixar.com/">PRMan</a>.</p>
+        <p>Director enables users to create animated CG scenes, play them back in realtime, or save a movie with frames rendered by <a href="https://renderman.pixar.com/" target="_blank">PRMan</a>.</p>
         <p>Functionality includes:</p>
         <ul>
         <li>Drag-n-drop geometry files onto the Director UI, and create instances of <em>Actors</em> from them.</li>
-        <li>Design shaders with the built-in node graph, using a subset of the <a href="http://opensource.imageworks.com/?p=osl">Open Shading Language</a> specification, and apply them to your Actors, to light and shade them how you imagined.</li>
+        <li>Design shaders with the built-in node graph, using a subset of the <a href="http://opensource.imageworks.com/?p=osl" target="_blank">Open Shading Language</a> specification, and apply them to your Actors, to light and shade them how you imagined.</li>
         <li>Animate virtually anything (Actors, Cameras, Lights, Shader parameters), by specifying property values at keyframes of your choice, in the Dope Sheet.</li>
         <li>Preview in realtime on your GPU using OpenGL, for an approximate look of your animation.</li>
         <li>Render individual frames using PRMan to check your look-dev.</li>
