Emphasise that it's Pixar's PRMan

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="page-header">
             <h1 class="text-center">Director <img class="text-center" src="images/directorlogo.png" width="10%" /></h1>
         </div>
-        <p>Director enables users to create animated CG scenes, play them back in realtime, or save a movie with frames rendered by <a href="https://renderman.pixar.com/" target="_blank">PRMan</a>.</p>
+        <p>Director enables users to create animated CG scenes, play them back in realtime, or save a movie with frames rendered by Pixar's <a href="https://renderman.pixar.com/" target="_blank">PRMan</a>.</p>
         <p>Functionality includes:</p>
         <ul>
         <li>Drag-n-drop geometry files onto the Director UI, and create instances of <em>Actors</em> from them.</li>
