Update copyright to include 2017

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>git is a separate download and may be required to upload projects to cloud based repositories.</p>
         <h3>Contact</h3>
         <p>For all queries, please email <a href="mailto:markfinal@hotmail.com">markfinal@hotmail.com</a>.</p>
-        <p>Copyright Mark Final, 2016</p>
+        <p>Copyright Mark Final, 2016-2017</p>
     </div>
   </body>
 </html>
