--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <li>Design shaders with the built-in node graph, using a subset of the <a href="http://opensource.imageworks.com/?p=osl" target="_blank">Open Shading Language</a> specification, and apply them to your Actors, to light and shade them how you imagined.</li>
         <li>Animate virtually anything (Actors, Cameras, Lights, Shader parameters), by specifying property values at keyframes of your choice, in the Dope Sheet.</li>
         <li>Preview in realtime on your GPU using OpenGL, for an approximate look of your animation.</li>
-        <li>Render individual frames using PRMan to check your look-dev.</li>
-        <li>Render your entire animation using PRMan, and create a movie file by combining the frame images using ffmpeg.</li>
+        <li>Render individual frames using REYES PRMan to check your look-dev.</li>
+        <li>Render your entire animation using REYES PRMan, and create a movie file by combining the frame images using ffmpeg.</li>
         <li>Share or collaborate your animations by saving them to the cloud.</li>
         </ul>
         <h3>Downloads</h3>
-        <p>Installers for the latest version of Director can be downloaded from <a href="./downloads" target="_blank">here</a>, for 64-bit Windows, Linux and macOS.</p>
+        <p>Installers for the latest version of Director (v0.2.0) can be downloaded, from <a href="./downloads" target="_blank">here</a>, for 64-bit desktop platforms. Minimum requirements are Windows 7+; Ubuntu 12+; CentOS 6+; macOS 10.9+.</p>
         <p>The User guide and Examples guide can be downloaded from <a href="./downloads/docs" target="_blank">here</a>.</p>
         <h3>License</h3>
         <p>A free 30-day trial license will be granted upon first use. Please contact the author for more details or alternatives.</p>
@@ -33,7 +33,7 @@
         <p>Some example projects can be found at <a href="https://github.com/director-examples" target="_blank">https://github.com/director-examples</a>. See the Examples guide for how to download them your computer.</p>
         <p>Videos of rendered animations and usage of Director can be found at <a href="https://vimeo.com/user58998164/videos" target="_blank">https://vimeo.com/user58998164/videos</a>.</p>
         <h3>Additional Requirements</h3>
-        <p>To use PRMan, a separate download and license is required.</p>
+        <p>To use PRMan, a separate download and license is required. REYES is supported up to version 21.</p>
         <p>ffmpeg used to create movie files requires a separate download.</p>
         <p>Blender is used to export data from .blend files, and requires a separate download.</p>
         <p>git is a separate download and may be required to upload projects to cloud based repositories.</p>
