Use the director vimeo channel

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>A free 30-day trial license will be granted upon first use. Please contact the author for more details or alternatives.</p>
         <h3>Examples</h3>
         <p>Some example projects can be found at <a href="https://github.com/director-examples" target="_blank">https://github.com/director-examples</a>. See the Examples guide for how to download them your computer.</p>
-        <p>Videos of rendered animations and usage of Director can be found at <a href="https://vimeo.com/user58998164/videos" target="_blank">https://vimeo.com/user58998164/videos</a>.</p>
+        <p>Videos of rendered animations and usage of Director can be found at <a href="https://vimeo.com/channels/directorcganimation" target="_blank">https://vimeo.com/channels/directorcganimation</a>.</p>
         <h3>Additional Requirements</h3>
         <p>To use PRMan, a separate download and license is required. REYES is supported up to version 21.</p>
         <p>ffmpeg used to create movie files requires a separate download.</p>
